fix(fileUpload): use accessible contrasted color for file size

--- a/packages/ods-react/src/components/file-upload/src/components/file-upload-item/fileUploadItem.module.scss
+++ b/packages/ods-react/src/components/file-upload/src/components/file-upload-item/fileUploadItem.module.scss
@@ -59,7 +59,7 @@
 
       &__size {
         white-space: nowrap;
-        color: var(--ods-theme-text-color-disabled);
+        color: var(--ods-theme-input-placeholder-text-color);
         font-size: 0.75rem;
       }
     }
